# django-fields-history

./: .editorconfig  .gitignore  CHANGES.md  README.md  pyproject.toml
fields_history/: base.py  managers.py  models.py  trackers.py
fields_history/migrations/: 0001_initial.py
fields_history/postgres/: __init__.py  apps.py  managers.py  models.py
fields_history/postgres/migrations/: 0001_initial.py  0002_alter_fieldshistory_history.py
tests/: conftest.py  models.py  test_trackers.py
