[tool.poetry]
name = "django-fields-history"
version = "0.1.0"
description = "Store model fields history"

license = "MIT"

authors = [
    "Alex Shalynin <a.shalynin@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/vishes-shell/django-fields-history"
homepage = "https://github.com/vishes-shell/django-fields-history"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
addict = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
django = "^2.2"
pytest-django = "^3.8.0"
psycopg2-binary = "^2.8.4"
pytest-sugar = "^0.9.2"
django-dynamic-fixture = "^3.0.3"
