[tool.poetry]
name = "django-fields-history"
version = "0.1.0"
description = "Store model fields history"
license = "MIT"
authors = [
    "Alex Shalynin <a.shalynin@gmail.com>"
]
readme = 'README.md'
repository = "https://github.com/vishes-shell/django-fields-history"
homepage = "https://github.com/vishes-shell/django-fields-history"
keywords = ['django', 'fields', 'history']
classifiers = [
    "Framework :: Django",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "fields_history" }
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
addict = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
django = "^2.2"
pytest-django = "^3.8.0"
psycopg2-binary = "^2.8.4"
pytest-sugar = "^0.9.2"
django-dynamic-fixture = "^3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
